--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Website to download stock price predictor
+description: A starter ML model to predict stock prices!
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://stcokprediction.github.io
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
