--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Website to download stock price predictor
 description: A starter ML model to predict stock prices!
 theme: just-the-docs
 
-url: https://stcokprediction.github.io
+url: ttps://lawfink.github.io/API/
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
